--- a/app/src/main/res/layout/activity_campaign.xml
+++ b/app/src/main/res/layout/activity_campaign.xml
@@ -17,8 +17,9 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progressBarCampaignView"
         style="?android:attr/progressBarStyleHorizontal"
+        android:minHeight="30dp"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
@@ -26,12 +27,85 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/campaignHeaderImg" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/progressBarCampaignView"
+        app:layout_constraintStart_toStartOf="@+id/progressBarCampaignView"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarCampaignView">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/campaignTargetLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Target"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/campaignRaisedLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Raised"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline6"
+                    app:layout_constraintTop_toTopOf="@+id/campaignTargetLabel" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.49790794" />
+
+                <TextView
+                    android:id="@+id/campaign_target_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Target Amount"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/campaignTargetLabel" />
+
+                <TextView
+                    android:id="@+id/campaign_raised_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Raised Amount"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline6"
+                    app:layout_constraintTop_toTopOf="@+id/campaign_target_amount" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageView
         android:id="@+id/campaignProfileImg"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="34dp"
+        android:layout_height="29dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBarCampaignView"
         app:layout_constraintTop_toBottomOf="@+id/campaign_title"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -49,12 +123,11 @@
         android:id="@+id/campaign_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintStart_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintEnd_toEndOf="@+id/progressBarCampaignView"
+        app:layout_constraintStart_toStartOf="@+id/progressBarCampaignView"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <TextView
         android:id="@+id/campaignDescription"
@@ -62,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/progressBarCampaignView"
         app:layout_constraintStart_toStartOf="@+id/campaignProfileImg"
         app:layout_constraintTop_toBottomOf="@+id/locationTV" />
 
@@ -87,7 +160,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/campaignProfileImg"
         app:layout_constraintTop_toBottomOf="@+id/campaignProfileImg"
-        app:srcCompat="@drawable/ic_baseline_location_on_24" />
+        android:background="@drawable/ic_baseline_location_on_24"
+        android:backgroundTint="@color/colorPrimary"/>
 
     <TextView
         android:id="@+id/locationTV"
