--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".AddProject"
+    tools:context=".ui.AddProjectActivity"
     tools:deviceIds="wear">
 
     <ImageView
@@ -110,5 +110,15 @@
         app:layout_constraintEnd_toEndOf="@+id/addProject_descriptionET"
         app:layout_constraintStart_toStartOf="@+id/addProject_descriptionET"
         app:layout_constraintTop_toBottomOf="@+id/addProject_descriptionET" />
+
+    <TextView
+        android:id="@+id/postUploadImageTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Upload Image"
+        app:layout_constraintBottom_toBottomOf="@+id/add_project_img"
+        app:layout_constraintEnd_toEndOf="@+id/add_project_img"
+        app:layout_constraintStart_toStartOf="@+id/add_project_img" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
