--- a/app/src/main/res/layout/activity_campaign_list.xml
+++ b/app/src/main/res/layout/activity_campaign_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CampaignListActivity">
+    tools:context=".ui.CampaignListActivity">
 
     <include
         android:id="@+id/menu_toolbar"
