--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_profile_img"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -24,6 +24,8 @@
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_width="2dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
