--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpFragment">
+    tools:context=".ui.SignUpFragment">
 
     <TextView
         android:id="@+id/textview_second"
@@ -74,12 +74,12 @@
         app:layout_constraintStart_toStartOf="@+id/signUp_password"
         app:layout_constraintTop_toBottomOf="@+id/signUp_password" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_img_upload"
         android:layout_width="190dp"
         android:layout_height="176dp"
         android:layout_marginTop="29dp"
-        android:background="@drawable/ic_baseline_cloud_upload_24"
+        android:src="@drawable/ic_baseline_cloud_upload_24"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
