--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.training.crowdfunder.SignInFragment"
+        android:name="com.training.crowdfunder.ui.SignInFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_sign_in">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.training.crowdfunder.SignUpFragment"
+        android:name="com.training.crowdfunder.ui.SignUpFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_sign_up">
 
